<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/dining_list_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />

    <group>
        <item
            android:enabled="false"
            android:title="@string/sort_by" />
        <item
            android:id="@+id/dining_list_sort_alpha"
            android:title="@string/sort_alpha" />
        <item
            android:id="@+id/dining_list_sort_crowd"
            android:title="@string/sort_crowd" />
        <!-- TODO: enable this when implementation is ready -->
        <!-- <item -->
        <!--     android:id="@+id/dining_list_sort_location" -->
        <!--     android:title="@string/sort_location" /> -->
    </group>

</menu>