<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".diningdetail.DiningDetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/dining_detail_appbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:subtitle="Subtitle"
                app:title="Title" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:padding="16dp">

                <TextView
                    android:id="@+id/facility_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="facility.id" />

                <TextView
                    android:id="@+id/dining_detail_response"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/facility_id"
                    tools:text="Response" />

                <TextView
                    android:id="@+id/header_availability"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/availability"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dining_detail_response" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_availability"
                    style="@style/Flux.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header_availability">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/flux_grey_medium"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/text_availability_num"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Some number"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/text_last_updated"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="Last updated"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_availability" />

                <TextView
                    android:id="@+id/header_menu"
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/menu"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/text_last_updated" />

                <androidx.cardview.widget.CardView
                    style="@style/Flux.CardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header_menu">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <com.google.android.material.tabs.TabLayout
                            android:id="@+id/tabs_menu_meal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:tabIndicatorColor="@color/flux_green"
                            app:tabSelectedTextColor="@color/flux_green">

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Breakfast" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Lunch" />

                            <com.google.android.material.tabs.TabItem
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Dinner" />

                        </com.google.android.material.tabs.TabLayout>

                        <TextView
                            android:id="@+id/text_no_menu"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:text="@string/no_menu" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/list_menu_items"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
